Add fields to analyze just trees >10 cm DBH

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ ForestryTest_US-Wcr/ED_MET
 ForestryTest_US-WCr/0_setup/.httr-oauth
 */*/extracted_output*/*
 *.h5
+ForestryTest_US-WCr/Figures/WCr_MANDIFORE_Output_QuickGraphs.pdf
