--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ ForestryTests_Ameriflux/met_raw/WILLOWCREEK/GFDL_CM3_rcp45_r1i1p1/GFDL.CM3.rcp45
 *.nc
 ForestryTests_Ameriflux/met_ed/GFDL_CM3_rcp45_r1i1p1/ED_MET_DRIVER_HEADER
 ForestryTests_Ameriflux/ED_MET/GFDL_CM3_rcp45_r1i1p1/ED_MET_DRIVER_HEADER
+
+WCr Test/*
