--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ ForestryTests_Ameriflux/met_ed/GFDL_CM3_rcp45_r1i1p1/ED_MET_DRIVER_HEADER
 ForestryTests_Ameriflux/ED_MET/GFDL_CM3_rcp45_r1i1p1/ED_MET_DRIVER_HEADER
 
 WCr Test/*
+ForestryTests_Ameriflux/Figures/WCr_MANDIFORE_Output_QuickGraphs_PFT.pdf
+*.pdf
