--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ ForestryTests_Ameriflux/met_ed/WILLOWCREEK/GFDL_CM3_rcp45_r1i1p1/ED_MET_DRIVER_H
 ForestryTests_Ameriflux/init_files/fluxnet_dietze/*
 ForestryTests_Ameriflux/3_analyze/processed_out/MANDIFORE_Ameriflux_month_pft.csv
 ForestryTests_Ameriflux/3_analyze/processed_out/MANDIFORE_Ameriflux_month_site.csv
+ForestryTests_Ameriflux/3_analyze/processed_out/MANDIFORE_Ameriflux_month_site_last10.csv
+ForestryTests_Ameriflux/3_analyze/processed_out/MANDIFORE_Ameriflux_month_pft_last10.csv
