Study location map!

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ ForestryTests_Ameriflux/3_analyze/processed_out/MANDIFORE_Ameriflux_month_pft.cs
 ForestryTests_Ameriflux/3_analyze/processed_out/MANDIFORE_Ameriflux_month_site.csv
 ForestryTests_Ameriflux/3_analyze/processed_out/MANDIFORE_Ameriflux_month_site_last10.csv
 ForestryTests_Ameriflux/3_analyze/processed_out/MANDIFORE_Ameriflux_month_pft_last10.csv
+ForestryTests_Ameriflux/0_setup/SiteLocations.png
