More poster figures
luss adding a return to the end of a .pss so it can get read by R

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ ForestryTests_Ameriflux/3_analyze/processed_out/MANDIFORE_Ameriflux_month_site.c
 ForestryTests_Ameriflux/3_analyze/processed_out/MANDIFORE_Ameriflux_month_site_last10.csv
 ForestryTests_Ameriflux/3_analyze/processed_out/MANDIFORE_Ameriflux_month_pft_last10.csv
 ForestryTests_Ameriflux/0_setup/SiteLocations.png
+ForestryTests_Ameriflux/0_setup/Treatment_Illustration.png
