--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ ForestryTests_Ameriflux/3_analyze/processed_out/MANDIFORE_Ameriflux_month_site_l
 ForestryTests_Ameriflux/3_analyze/processed_out/MANDIFORE_Ameriflux_month_pft_last10.csv
 ForestryTests_Ameriflux/0_setup/SiteLocations.png
 ForestryTests_Ameriflux/0_setup/Treatment_Illustration.png
+MortonArb/0_setup/CWBurns_Midgley_soil_data_master_copy.csv
