Beginnings of forestry driver for The Morton Arboretum

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ ForestryTests_Ameriflux/3_analyze/processed_out/MANDIFORE_Ameriflux_month_pft_la
 ForestryTests_Ameriflux/0_setup/SiteLocations.png
 ForestryTests_Ameriflux/0_setup/Treatment_Illustration.png
 MortonArb/0_setup/CWBurns_Midgley_soil_data_master_copy.csv
+MortonArb/0_setup/EW soil data for ED2 models.xlsx
