--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ MortonArb/0_setup/CWBurns_Midgley_soil_data_master_copy.csv
 MortonArb/0_setup/EW soil data for ED2 models.xlsx
 MortonArb/1_runs/*/*/ED2IN
 MortonArb/1_runs/*/*/*.xml
+MortonArb/met_raw
